update deply & Dockerfile